[package]
name = "today-tmp"
version = "0.1.0-devel"
authors = ["Marcin Siwak <marcin.siwak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"]}

[dev-dependencies]
tempdir = "0.3.7"
